tests/error/cast_to_unresolved_struct.c
// fail "'unresovled': Undeclared struct."

int main(){
	return (struct unresovled){}.a;
}